# packages/protocol/openapi.yaml
@@ -60,7 +60,6 @@ components:
       type: string
       enum:
         - AVTransport
-        - RenderingControl
         - ZoneGroupTopology
         - GroupRenderingControl
       description: Sonos UPnP services for GENA subscriptions
@@ -405,48 +404,6 @@ components:
           type: integer
           format: int64
 
-    VolumeChangeEvent:
-      type: object
-      description: Volume change event from Sonos speaker
-      required:
-        - type
-        - volume
-        - speakerIp
-        - timestamp
-      properties:
-        type:
-          type: string
-          const: volume
-        volume:
-          type: integer
-          minimum: 0
-          maximum: 100
-        speakerIp:
-          type: string
-        timestamp:
-          type: integer
-          format: int64
-
-    MuteChangeEvent:
-      type: object
-      description: Mute state change event from Sonos speaker
-      required:
-        - type
-        - mute
-        - speakerIp
-        - timestamp
-      properties:
-        type:
-          type: string
-          const: mute
-        mute:
-          type: boolean
-        speakerIp:
-          type: string
-        timestamp:
-          type: integer
-          format: int64
-
     ZoneChangeEvent:
       type: object
       description: Zone group topology change event
@@ -531,8 +488,6 @@ components:
       description: Union type for all Sonos events sent via WebSocket
       oneOf:
         - $ref: "#/components/schemas/TransportStateEvent"
-        - $ref: "#/components/schemas/VolumeChangeEvent"
-        - $ref: "#/components/schemas/MuteChangeEvent"
         - $ref: "#/components/schemas/ZoneChangeEvent"
         - $ref: "#/components/schemas/SourceChangedEvent"
         - $ref: "#/components/schemas/GroupVolumeChangeEvent"
@@ -541,8 +496,6 @@ components:
         propertyName: type
         mapping:
           transportState: "#/components/schemas/TransportStateEvent"
-          volume: "#/components/schemas/VolumeChangeEvent"
-          mute: "#/components/schemas/MuteChangeEvent"
           zoneChange: "#/components/schemas/ZoneChangeEvent"
           sourceChanged: "#/components/schemas/SourceChangedEvent"
           groupVolume: "#/components/schemas/GroupVolumeChangeEvent"
